Update readme with project overview and objectives
Added an overview of projects completed during the first year of specialization in computer science, including objectives related to programming languages, tools, theoretical knowledge, and critical problem-solving.

--- a/3eme_annee/readme
+++ b/3eme_annee/readme
@@ -1,1 +1,7 @@
+Retrouvez ici l'ensemble des travaux réaliser durant ma première année de spécialisation en informatique.
 
+Ces projets avaient différents objectifs:
+  - Monter en compétences sur différents langages de programmation comme C, python ou encore java.
+  - Monter en compétences sur différents outils, comme l'utilisation de GIT, LaTeX, Jupyter-Notebook...
+  - La mise en pratique de connaissances théoriques vues en cours
+  - Développer un esprit critique face à résolution d'un problème 
