Revise readme for first year projects in CS
Updated the readme to reflect projects from the first year of specialization in computer science, detailing objectives and tools used.

--- a/3eme_annee/readme
+++ b/3eme_annee/readme
@@ -1,7 +1,37 @@
-Retrouvez ici l'ensemble des travaux réaliser durant ma première année de spécialisation en informatique.
+#Travaux de Première Année de Spécialisation en Informatique
 
-Ces projets avaient différents objectifs:
-  - Monter en compétences sur différents langages de programmation comme C, python ou encore java.
-  - Monter en compétences sur différents outils, comme l'utilisation de GIT, LaTeX, Jupyter-Notebook...
-  - La mise en pratique de connaissances théoriques vues en cours
-  - Développer un esprit critique face à résolution d'un problème 
+Retrouvez ici l’ensemble des projets réalisés au cours de ma première année de spécialisation en informatique.  
+Ces travaux reflètent à la fois l’apprentissage de nouveaux langages, la maîtrise d’outils professionnels, ainsi que la mise en pratique de notions théoriques.
+
+---
+
+##Ces projets avaient pour but de :
+
+-  **Développer mes compétences en programmation**, à travers l’apprentissage et la pratique de plusieurs langages :
+  - C  
+  - Python  
+  - Java  
+
+-  **Découvrir et maîtriser divers outils** essentiels au travail collaboratif et à la production de documents techniques :
+  - Git & GitLab
+  - LaTeX  
+  - Jupyter Notebook  
+
+-   **Mettre en pratique les connaissances théoriques** acquises en cours, notamment en algorithmique, en électronique, en capteurs, en analyse numérique et en programmation orientée objet.
+
+-   **Renforcer mon esprit critique** face à la résolution d'un problème.
+
+---
+
+##Sommaire
+
+- [`/Projet_C`](./Projet_C) — Introduction à la programmation en C  
+- [`/Projet_Python`](./Projet_Python) — Manipulation de données et algorithmique  
+- [`/Projet_Java`](./Projet_Java) — Programmation orientée objet  
+- [`/Outils`](./Outils) — Exercices et travaux pratiques sur Git, LaTeX et Jupyter  
+
+---
+
+> *Année universitaire : 2024 – 2025*  
+> *Auteur : LENOBLE Louis*  
+> *III3 – Première Année de spécialisation*
